--- a/backend/firebase.json
+++ b/backend/firebase.json
@@ -13,6 +13,10 @@
       "npm --prefix \"$RESOURCE_DIR\" run build"
     ]
   },
+  "firestore": {
+    "port": 8080,
+    "rules": "firestore.rules"
+  },
   "emulators": {
     "functions": {
       "port": 5001
