--- a/backend/functions/package.json
+++ b/backend/functions/package.json
@@ -15,11 +15,21 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "busboy": "^1.6.0",
+    "cloudinary": "^2.7.0",
+    "content-type": "^1.0.5",
+    "dotenv": "^17.2.0",
+    "firebase": "^12.0.0",
     "firebase-admin": "^12.7.0",
     "firebase-functions": "^6.0.1",
+    "multer": "^2.0.2",
+    "openai": "^5.10.1",
     "zod": "^3.24.3"
   },
   "devDependencies": {
+    "@types/busboy": "^1.5.4",
+    "@types/content-type": "^1.1.9",
+    "@types/multer": "^2.0.0",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
